Initial navigation property editor implementation

--- a/presentation/components/public/locales/en/PresentationComponents.json
+++ b/presentation/components/public/locales/en/PresentationComponents.json
@@ -19,5 +19,8 @@
   },
   "tree": {
     "presentation-components-muted-node": "Too many child nodes."
+  },
+  "navigation-property-editor": {
+    "choose-value": "Choose value"
   }
 }
