fix outdated documentation links

--- a/docs/changehistory/3.0.0.md
+++ b/docs/changehistory/3.0.0.md
@@ -405,7 +405,7 @@ The new [UserPreferencesAccess]($frontend) interface is a simple, easy-to-use AP
 
 #### Localization initialization
 
-In previous versions, localization was provided via the I18N class. iTwin.js has been updated to instead use the [Localization]($common) interface. The initialization of [IModelApp]($frontend) now takes an optional object that implements [Localization]($common). The [ITwinLocalization]($i18n) class supplies the default implementation, and may be customized with [LocalizationOptions]($i18n) in the constructor and supplied via [IModelAppOptions.localization]($frontend).
+In previous versions, localization was provided via the I18N class. iTwin.js has been updated to instead use the [Localization]($common) interface. The initialization of [IModelApp]($frontend) now takes an optional object that implements [Localization]($common). The [ITwinLocalization]($i18n) class supplies the default implementation, and may be customized with [ITwinLocalizationOptions]($i18n) in the constructor and supplied via [IModelAppOptions.localization]($frontend).
 
 The previous way to provide localization options:
 
@@ -420,7 +420,7 @@ await IModelApp.startup({ i18n: i18nOptions });
 Now becomes:
 
 ```ts
-const localizationOptions: LocalizationOptions = {
+const localizationOptions: ITwinLocalizationOptions = {
   urlTemplate: `${window.location.origin}/locales/{{lng}}/{{ns}}.json`
 };
 
