--- a/core/i18n/src/test/public/locales/de/Test.json
+++ b/core/i18n/src/test/public/locales/de/Test.json
@@ -1,10 +1,16 @@
 {
-  "Trivial": {
-    "Test1": "Localized Trivial Test 1 (in german)",
-    "Test2": "Localized Trivial Test 2 (in german)"
+  "FirstTrivial": "First level string (german)",
+  "FirstSubstitution1": "First level {{str}} (german)",
+  "FirstSubstitution2": "First level {{str1}} and {{str2}} (german)",
+  "SecondTrivial": {
+    "Test1": "Second level string 1 (german)",
+    "Test2": "Second level string 2 (german)"
   },
-  "Substitution": {
-    "Test1": "Substitute {{varA}} and {{varB}} (in german)",
-    "Test2": "Reverse substitute {{varB}} and {{varA}} (in german)"
+  "SecondSubstitution": {
+    "Test1": "Substitute {{varA}} and {{varB}} (german)",
+    "Test2": "Reverse substitute {{varB}} and {{varA}} (german)"
+  },
+  "MyObject": {
+    "ObjectKey1": "ObjectValue1 (german)"
   }
 }
