--- a/core/i18n/src/test/public/locales/en/Default.json
+++ b/core/i18n/src/test/public/locales/en/Default.json
@@ -9,5 +9,6 @@
   "SecondSubstitution": {
     "Test1": "Substitute {{varA}} and {{varB}} (default)",
     "Test2": "Reverse substitute {{varB}} and {{varA}} (default)"
-  }
+  },
+  "OnlyEnglish": "Hello"
 }
