--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -43,21 +43,21 @@
   ],
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
+    "@itwin/certa": "workspace:*",
     "@itwin/core-bentley": "workspace:*",
     "@itwin/core-common": "workspace:*",
     "@itwin/eslint-plugin": "workspace:*",
-    "@itwin/certa": "workspace:*",
-    "@types/node": "16.11.7",
-    "@types/mocha": "^8.2.2",
     "@types/chai": "4.3.1",
     "@types/i18next": "^8.4.2",
     "@types/i18next-browser-languagedetector": "^2.0.1",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "16.11.7",
+    "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0",
-    "webpack": "^5.64.4",
     "source-map-loader": "^4.0.0",
-    "chai": "^4.1.2"
+    "typescript": "~4.4.0",
+    "webpack": "^5.64.4"
   },
   "//dependencies": [
     "NOTE: these dependencies are specific to core-i18n",
