update i18next package to 21.9.1 and don't lock the package version

--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -65,7 +65,7 @@
     "NOTE: core-i18n should remain UI technology agnostic, so no react/angular dependencies are allowed"
   ],
   "dependencies": {
-    "i18next": "21.9.0",
+    "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.4.1"
   },
