--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
     "@itwin/certa": "workspace:*",
+    "@types/chai": "4.3.1",
     "@itwin/core-bentley": "workspace:*",
     "@itwin/core-common": "workspace:*",
     "@itwin/eslint-plugin": "workspace:*",
