--- a/docs/changehistory/3.0.0.md
+++ b/docs/changehistory/3.0.0.md
@@ -495,7 +495,7 @@ The release contains quite a few changes to authorization to make iTwin.js more 
 
 #### AccessToken refactor
 
-The previous `AccessToken` class has been completely removed in favor of a simple [AccessToken]($core-bentley) string type. The core packages no longer interpret the token and only pass it around directly to the method that need it using [TokenArg]($core-backend).
+The previous `AccessToken` class has been completely removed in favor of a simple [AccessToken]($core-bentley) string type. The core packages no longer interpret the token and only pass it around directly to the functions that need it using [TokenArg]($core-backend).
 
 #### ClientRequestContext and AuthorizedClientRequestContext have been removed
 
