Minor updates to the 3.0.0 changelog (#4302)
* Minor updates to the 3.0.0 changelog

(cherry picked from commit 711909854c2ebe1e36048eae4d4cd72ee33843d0)

--- a/docs/changehistory/3.0.0.md
+++ b/docs/changehistory/3.0.0.md
@@ -399,7 +399,7 @@ await IModelApp.startup(appOptions);
 
 #### Deprecation of the settings on iModelApp
 
-The previous `IModelApp.settings` API has been removed in favor of [IModelApp.userPreferences]($frontend). The updated API will provide a clear distinction between the "settings" within the control of the user (user preferences) and which are within control of the admin of an iModel/iTwin (Workspaces). The separation is intended to make it clear who is capability of modifying and overriding a given setting while making the API easier to use.
+The previous `IModelApp.settings` API has been removed in favor of [IModelApp.userPreferences]($frontend). The updated API will provide a clear distinction between the "settings" within the control of the user (user preferences) and which are within control of the admin of an iModel/iTwin (Workspaces). The separation is intended to make it clear who is capable of modifying and overriding a given setting while making the API easier to use.
 
 The new [UserPreferencesAccess]($frontend) interface is a simple, easy-to-use API that can be implemented in many different ways. The `core-frontend` package does not dictate an implementation and could easily be setup using Local Storage (via [Storage APIs](https://developer.mozilla.org/en-US/docs/Web/API/Storage)) or by a cloud-hosted storage mechanism to share across user sessions.
 
@@ -491,6 +491,12 @@ The loader has been deprecated due to a preference for using the dotenv package 
 
 ### Authorization re-work
 
+The release contains quite a few changes to authorization to make iTwin.js more flexible for different non-Bentley Identity Providers and removing the enforcement of OAuth2.0 in the core library. In order to make this change, a set of changes were made; the format of the token used, refactored how an access token is passed through the code and remove the default clients that made it challenging to use different authentication workflows.
+
+#### AccessToken refactor
+
+The previous `AccessToken` class has been completely removed in favor of a simple [AccessToken]($core-bentley) string type. The core packages no longer interpret the token and only pass it around directly to the functions that need it using [TokenArg]($core-backend).
+
 #### ClientRequestContext and AuthorizedClientRequestContext have been removed
 
 The classes `ClientRequestContext` and `AuthorizedClientRequestContext` existed to identify RPC requests between a web frontend and a cloud backend. They have been removed. Most places that previously used an `AuthorizedClientRequestContext` should now be replaced with [AccessToken]($core-bentley).
@@ -504,6 +510,10 @@ requestContext.enter();
 you can simply delete it.
 
 This change mostly affects backend code. For backend [RPC](../learning/RpcInterface.md) implementations, all _unhandled_ exceptions will automatically be logged along the appropriate RPC metadata. For this reason, it often preferable to throw an exception rather than logging an error and returning a status in code that may or may not be called from RPC.
+
+#### Authorization Clients
+
+The class hierarchy of `AuthorizationClient`s has been simplified in the core packages and the only contract of any authorization client is the [AuthorizationClient]($core-common) interface.
 
 ### iModels
 
@@ -989,8 +999,6 @@ Adjusting callers of [RenderSystem.createTextureFromImageSource]($frontend):
 ```
 
 #### Default minimum level of detail for spatial views
-
-TODO @pmconne should this be in app setup or do you think it makes sense here?
 
 [TileAdmin.Props.minimumSpatialTolerance]($frontend) specifies the minimum level of detail to produce for views of spatial models. Previously, the default was `undefined`, indicating no minimum. The default has been changed to 1 millimeter. This means that when zooming in extremely closely, geometry that contains details on the order of 1mm or smaller will not refine further. This prevents the display system from requesting extraordinarily detailed graphics, improving performance.
 
