--- a/presentation/components/public/locales/en/PresentationComponents.json
+++ b/presentation/components/public/locales/en/PresentationComponents.json
@@ -15,7 +15,10 @@
     "select-instance": "Select element"
   },
   "instance-filter-builder": {
-    "classes": "Classes"
+    "classes": "Classes",
+    "category": "Category:",
+    "class": "Class:",
+    "schema": "Schema:"
   },
   "tree": {
     "presentation-components-muted-node": "Too many child nodes."
