--- a/core/frontend-devtools/public/locales/en/FrontendDevTools.json
+++ b/core/frontend-devtools/public/locales/en/FrontendDevTools.json
@@ -204,6 +204,9 @@
     "AttachArcGISMapLayerTool": {
       "keyin": "fdt attach arcgis maplayer"
     },
+    "AttachArcGISFeatureMapLayerTool": {
+      "keyin": "fdt attach arcgisfeature maplayer"
+    },
     "AttachTileURLMapLayerTool": {
       "keyin": "fdt attach tileurl maplayer"
     },
@@ -463,7 +466,7 @@
     "ToggleTileTreeReferences": {
       "keyin": "fdt toggle treerefs"
     },
-   "WoWIgnoreBackground": {
+    "WoWIgnoreBackground": {
       "keyin": "fdt wow ignore background"
     },
     "SetSkySphere": {
