--- a/test-apps/display-test-app/public/locales/en/SVTTools.json
+++ b/test-apps/display-test-app/public/locales/en/SVTTools.json
@@ -160,6 +160,9 @@
         "EnterDrapePoint": "Enter drape terrain point",
         "SelectDrapeRealityModel": "Select reality model or map (with terrain) to drape"
       }
+    },
+    "OpenRealityModelSettings": {
+      "keyin": "dta reality model settings"
     }
   }
 }
