--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -56,7 +56,7 @@
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
     "source-map-loader": "^4.0.0",
-    "typescript": "~4.4.0",
+    "typescript": "4.9.1-beta",
     "webpack": "^5.64.4"
   },
   "//dependencies": [
