Presentation: Navigation property editing (#4388)
* Initial navigation property editor implementation

* Finalize navigation property editor implementation

* rush update

* rush extract-api

* rush change

* Localize select messages

* Fix unit test

* Add removed span element

* Update presentation/components/src/test/instance-filter-builder/PresentationInstanceFilterBuilder.test.tsx

Co-authored-by: Grigas <35135765+grigasp@users.noreply.github.com>

* PR fixes

* Fix tests

* Refactor NavigationPropertyEditorContext

* Fix hasFocus implementation

Co-authored-by: Grigas <35135765+grigasp@users.noreply.github.com>

--- a/presentation/components/public/locales/en/PresentationComponents.json
+++ b/presentation/components/public/locales/en/PresentationComponents.json
@@ -22,5 +22,9 @@
   },
   "tree": {
     "presentation-components-muted-node": "Too many child nodes."
+  },
+  "navigation-property-editor": {
+    "select-target-instance": "Select target instance",
+    "loading-target-instances": "Loading target instances"
   }
 }
