Tool for attaching custom reality data.

--- a/test-apps/display-test-app/public/locales/en/SVTTools.json
+++ b/test-apps/display-test-app/public/locales/en/SVTTools.json
@@ -163,6 +163,9 @@
     },
     "OpenRealityModelSettings": {
       "keyin": "dta reality model settings"
+    },
+    "AttachCustomRealityData": {
+      "keyin": "dta attach reality"
     }
   }
 }
