Changed the default bahavior of MapLayersWidget, WMS basic authentifcation and ESRI legacy token are now disable by default.

--- a/extensions/map-layers/src/public/locales/en/mapLayers.json
+++ b/extensions/map-layers/src/public/locales/en/mapLayers.json
@@ -38,6 +38,7 @@
     "MissingCredentials": "This layer requires credentials to be provided",
     "Name": "Name",
     "NameInputPlaceHolder": "Enter Map Name",
+    "NoCredentialsSupportLabel": "Server requires credentials but the current configuration does not allow it",
     "RemoveLayerDefButtonTitle": "Delete layer definition",
     "RemoveLayerDefDialogMessage": "Are you sure you want to delete {{layerName}} ?",
     "RemoveLayerDefDialogTitle": "Delete layer definition",
