--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -57,7 +57,8 @@
     "rimraf": "^3.0.2",
     "source-map-loader": "^4.0.0",
     "typescript": "~4.4.0",
-    "webpack": "^5.64.4"
+    "webpack": "^5.64.4",
+    "babel-loader": "~8.2.5"
   },
   "//dependencies": [
     "NOTE: these dependencies are specific to core-i18n",
