--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -52,13 +52,13 @@
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
+    "babel-loader": "~8.2.5",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
     "source-map-loader": "^4.0.0",
     "typescript": "~4.4.0",
-    "webpack": "^5.64.4",
-    "babel-loader": "~8.2.5"
+    "webpack": "^5.64.4"
   },
   "//dependencies": [
     "NOTE: these dependencies are specific to core-i18n",
