--- a/core/i18n/package.json
+++ b/core/i18n/package.json
@@ -53,6 +53,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
     "babel-loader": "~8.2.5",
+    "babel-plugin-istanbul": "~6.1.1",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
