--- a/editor/frontend/src/public/locales/en/Editor.json
+++ b/editor/frontend/src/public/locales/en/Editor.json
@@ -212,6 +212,32 @@
         "IdentifyEnd": "Identify end to modify"
       }
     },
+    "ExtrudeCurve": {
+      "keyin": "editor extrude curve",
+      "flyover": "Extrude Curve",
+      "Label": {
+        "Length": "Length",
+        "Orthogonal": "Orthogonal",
+        "Capped": "Solid",
+        "KeepProfile": "Keep Profile"
+      },
+      "Prompts": {
+        "LengthPoint": "Define length"
+      }
+    },
+    "RevolveCurve": {
+      "keyin": "editor revolve curve",
+      "flyover": "Revolve Curve",
+      "Label": {
+        "Angle": "Sweep Angle",
+        "Capped": "Solid",
+        "KeepProfile": "Keep Profile"
+      },
+      "Prompts": {
+        "AxisPoint": "Define point on axis",
+        "AxisDirection": "Define axis direction"
+      }
+    },
     "UniteSolids": {
       "keyin": "editor unite solids",
       "flyover": "Unite selected solids"
