Added key-in to toggle normal map display

--- a/core/frontend-devtools/public/locales/en/FrontendDevTools.json
+++ b/core/frontend-devtools/public/locales/en/FrontendDevTools.json
@@ -18,6 +18,9 @@
     "ToggleDrapeFrustum": {
       "keyin": "fdt toggle drapefrustum"
     },
+    "ToggleNormalMaps": {
+      "keyin": "fdt toggle normalmaps"
+    },
     "ReportWebGLCompatibility": {
       "keyin": "fdt webgl report compatibility"
     },
