--- a/ui/appui-react/public/locales/en/UiFramework.json
+++ b/ui/appui-react/public/locales/en/UiFramework.json
@@ -170,7 +170,9 @@
       "animateToolSettingsTitle": "Animate Docked Tool Settings on appear",
       "animateToolSettingsDescription": "Animate tool settings when they appear in the docked bar.",
       "useToolAsToolSettingsLabelTitle": "Use tool as tool settings label",
-      "useToolAsToolSettingsLabelDescription": "Use active tool name as the Tool Settings tab label, if false, will always be titled 'Tool Settings'."
+      "useToolAsToolSettingsLabelDescription": "Use active tool name as the Tool Settings tab label, if false, will always be titled 'Tool Settings'.",
+      "toolbarOpacityTitle": "Toolbar Opacity",
+      "toolbarOpacityDescription": "Opacity of 2.0 toolbars when mouse is not hovering."
     }
   },
   "tools": {
