--- a/extensions/map-layers/src/public/locales/en/mapLayers.json
+++ b/extensions/map-layers/src/public/locales/en/mapLayers.json
@@ -77,6 +77,7 @@
     "BackgroundLayers": "Background",
     "DropLayerLabel": "Drop layer here",
     "Label": "Map Layers",
+    "layerOutOfRange": "Invisible at current scale",
     "NoOverlayLayers": "No Overlay layers specified",
     "NoBackgroundLayers": "No Background layers specified",
     "OverlayLayers": "Overlay",
