Fixed invalid warning message and save the endpoint url to session storage and not the maplayer url

--- a/core/frontend/src/public/locales/en/iModelJs.json
+++ b/core/frontend/src/public/locales/en/iModelJs.json
@@ -162,7 +162,7 @@
   "MapLayers": {
     "Messages": {
       "LoadTileTokenError": "An authentication error occurred while loading tiles for layer '{{layerName}}'",
-      "FetchTooltipTokenError": "An authentication error occurred while fetching tooltip for layer '{{layerName}}'"
+      "FetchTooltipTokenError": "An authentication error occurred for layer: '{{layerName}}. Please login again.'"
     }
   },
   "TooltipInfo": {
