--- a/presentation/components/public/locales/en/PresentationComponents.json
+++ b/presentation/components/public/locales/en/PresentationComponents.json
@@ -15,10 +15,13 @@
     "select-instance": "Select element"
   },
   "instance-filter-builder": {
-    "classes": "Classes",
+    "select-class": "Select class...",
     "category": "Category:",
     "class": "Class:",
-    "schema": "Schema:"
+    "schema": "Schema:",
+    "apply": "Apply",
+    "cancel": "Cancel",
+    "filter": "Filter"
   },
   "tree": {
     "presentation-components-muted-node": "Too many child nodes."
