--- a/presentation/components/public/locales/en/PresentationComponents.json
+++ b/presentation/components/public/locales/en/PresentationComponents.json
@@ -24,7 +24,7 @@
     "filter": "Filter"
   },
   "tree": {
-    "presentation-components-muted-node": "Too many child nodes."
+    "too-many-child-nodes": "Too many child nodes"
   },
   "navigation-property-editor": {
     "select-target-instance": "Select target instance",
